--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -14,7 +14,7 @@
                     Browse our extensive collection.
                 </p>
                 <br>        
-                <a href="#" class="btn btn-primary my-2"> Create an account </a>                           
+                <a href="{% url 'register' %}" class="btn btn-primary my-2"> Create an account </a>                           
             </div>        
         </div>
 
