--- a/ecommerce/account/templates/account/registration/register.html
+++ b/ecommerce/account/templates/account/registration/register.html
@@ -1,1 +1,45 @@
-<h1>Register</h1>
+{% include "store/base.html" %}
+
+{% load static %}
+
+{% load crispy_forms_tags %}
+
+
+{% block content %}
+    <style>
+        body {
+            background-color: #f5f5f5;
+        }
+    </style>
+
+    <body>
+        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
+            <h3> Create your acccount </h3>
+            <h5> Purchase your items </h5>
+
+            <br>
+            <br>
+
+            <form method="POST" autocomplete="off">
+                {% csrf_token %}
+
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 mb-3">
+                        {{form.username|as_crispy_field}}
+                    </div>
+                    <div class="col-lg-12 col-md-12 mb-3">
+                        {{form.email|as_crispy_field}}
+                    </div>
+                    <div class="col-lg-12 col-md-12 mb-3">
+                        {{form.password1|as_crispy_field}}
+                    </div>
+                    <div class="col-lg-12 col-md-12 mb-3">
+                        {{form.password2|as_crispy_field}}
+                    </div>
+                </div>
+                <button type="submit"class="btn btn-primary"> Register </button>
+            </form>
+        </div>
+    </body>
+
+{% endblock %}
