--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -7,14 +7,12 @@
     <section class="py-4 text-center container">
 
         <div class="row py-lg-5">        
-            <div class="col-lg-6 col-md-8 mx-auto">                
-                <h4> Edenthought...Simplicity at it's finest. </h4>
-                <br>                
+            <div class="col-lg-6 col-md-8 mx-auto">                               
                 <p class="lead text-muted">
                     Browse our extensive collection.
                 </p>
                 <br>        
-                <a href="{% url 'register' %}" class="btn btn-primary my-2"> Create an account </a>                           
+                <a href="{% url 'register' %}" class="btn btn-primary my-2"> <i class="fa fa-user-plus" aria-hidden="true"></i> &nbsp; Create an account </a>                           
             </div>        
         </div>
 
