--- a/ecommerce/account/templates/account/registration/email_verification_failed.html
+++ b/ecommerce/account/templates/account/registration/email_verification_failed.html
@@ -1,1 +1,25 @@
-<h1> your account is not verified </h1>
+{% include "store/base.html" %}
+
+{% load static %}
+
+{% block content %}
+
+    <style>
+        body {
+            background-color: #CCCCCC;
+        }
+    </style>
+
+    <body>
+
+        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout text-center">
+            <i class="fa fa-times fa-3x mb-3" style="color: red;" aria-hidden="true"></i>
+            
+            <h5> <strong>Email verification failed</strong> </h5>
+            <hr>
+            <p> Please contact admin support </p>
+        </div>
+
+    </body>
+
+{% endblock %}
