--- a/ecommerce/account/templates/account/registration/email_verification_success.html
+++ b/ecommerce/account/templates/account/registration/email_verification_success.html
@@ -1,1 +1,26 @@
-<h1> your account is now verified </h1>
+{% include "store/base.html" %}
+
+{% load static %}
+
+{% block content %}
+
+    <style>
+        body {
+            background-color: #CCCCCC;
+        }
+    </style>
+
+    <body>
+
+        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout text-center">
+            <i class="fa fa-check fa-3x mb-3 text-success" aria-hidden="true"></i>
+            
+            <h5> <strong>Your account is now active</strong> </h5>
+            <hr>
+            <p> Please proceed to login </p>
+        </div>
+
+    </body>
+
+{% endblock %}
+
