--- a/ecommerce/account/templates/account/registration/register.html
+++ b/ecommerce/account/templates/account/registration/register.html
@@ -8,22 +8,21 @@
 {% block content %}
     <style>
         body {
-            background-color: #f5f5f5;
+            background-color: #CCCCCC;
         }
     </style>
 
     <body>
         <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
-            <h3> Create your acccount </h3>
-            <h5> Purchase your items </h5>
-
-            <br>
-            <br>
+            <div class="text-center">
+                <h3> Create your acccount </h3>
+            </div>
+            <hr>
 
             <form method="POST" autocomplete="off">
                 {% csrf_token %}
 
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col-lg-12 col-md-12 mb-3">
                         {{form.username|as_crispy_field}}
                     </div>
@@ -37,7 +36,12 @@
                         {{form.password2|as_crispy_field}}
                     </div>
                 </div>
-                <button type="submit"class="btn btn-primary"> Register </button>
+                <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Register </button>
+                <div class="text-center">
+
+                    <a href="{% url 'login' %}"> Already have an account? </a>
+
+                </div>
             </form>
         </div>
     </body>
