--- a/ecommerce/account/templates/account/my_login.html
+++ b/ecommerce/account/templates/account/my_login.html
@@ -38,7 +38,7 @@
                 </div>
                 
                 <div class="text-center">
-                    <a href=""> Forgot password? </a>
+                    <a href="{% url 'reset_password' %}"> Forgot password? </a>
                 </div>
             </form>
         </div>
