--- a/ecommerce/account/templates/account/my_login.html
+++ b/ecommerce/account/templates/account/my_login.html
@@ -33,6 +33,8 @@
 
                 <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Login </button>
 
+                {{ form.non_field_errors }}
+
                 <div class="text-center mb-3">
                     <a href="{% url 'register' %}"> Don't have an account? Register here </a>
                 </div>
