--- a/ecommerce/cart/templates/cart/cart_summary.html
+++ b/ecommerce/cart/templates/cart/cart_summary.html
@@ -75,7 +75,9 @@
       {% endfor %}
       
       <div class="col-12 text-end">
-        <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{ cart.get_total_price }} </div></div>
+        <div class="h6"> Total price: <div id="total" class="d-inline-flex fw-bold">$ {{ cart.get_total_price }} </div></div>
+        <br>
+        <a href="{% url 'checkout' %}" class="btn btn-primary my-2"> <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> &nbsp; Checkout</a>
       </div>
 
     </div>
