shipping management, orders management, clear cart after making order

--- a/ecommerce/account/templates/account/dashboard.html
+++ b/ecommerce/account/templates/account/dashboard.html
@@ -32,7 +32,7 @@
             </div>
             <hr>
             <p> Track your orders here </p>
-            <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'logout' %}"> My orders </a>
+            <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'track_orders' %}"> My orders </a>
         
         </div>
         <div class="container bg-white shadow-md p-5 mt-4 mb-4 form-layout">
