payment templates, requirement text file

--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -4,19 +4,21 @@
 
 {% block content %}
 
-    <section class="py-4 text-center container">
+    {% if not user.is_authenticated %}
+        <section class="py-4 text-center container">
 
-        <div class="row py-lg-5">        
-            <div class="col-lg-6 col-md-8 mx-auto">                               
-                <p class="lead text-muted">
-                    Browse our extensive collection.
-                </p>
-                <br>        
-                <a href="{% url 'register' %}" class="btn btn-primary my-2"> <i class="fa fa-user-plus" aria-hidden="true"></i> &nbsp; Create an account </a>                           
-            </div>        
-        </div>
-
-    </section>
+            <div class="row py-lg-5">        
+                <div class="col-lg-6 col-md-8 mx-auto">                               
+                    <p class="lead text-muted">
+                        Browse our extensive collection.
+                    </p>
+                    <br>        
+                    <a href="{% url 'register' %}" class="btn btn-primary my-2"> <i class="fa fa-user-plus" aria-hidden="true"></i> &nbsp; Create an account </a>                           
+                </div>        
+            </div>
+        </section>
+    {% endif %}
+    
     <div class="album py-5 bg-light">
         <div class="container"> 
             <div class="pb-3 h5"> All products </div>
