--- a/ecommerce/store/templates/store/list_category.html
+++ b/ecommerce/store/templates/store/list_category.html
@@ -33,8 +33,33 @@
             </div>
           </div>
         {% endfor %}
-
       </div>
+      <br>
+
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            {% if products.has_previous %}
+                <li class="page-item">
+                    <a class="page-link bg-primary text-white" href="?page1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link bg-primary text-white" href="?page={{ products.previous_page_number }}">{{ previous_page }}</a></li>
+            {% endif %}
+    
+            <li class="page-item disabled"><span class="page-link bg-secondary">{{ products.number }}</span></li>
+    
+            {% if products.has_next %}
+                <li class="page-item"><a class="page-link bg-primary text-white" href="?page={{ products.next_page_number }}">{{ next_page }}</a></li>
+                <li class="page-item">
+                    <a class="page-link bg-primary text-white" href="?page={{ products.paginator.num_pages }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+    
     </div>
   </div>
 
