--- a/ecommerce/store/templates/store/store.html
+++ b/ecommerce/store/templates/store/store.html
@@ -28,11 +28,11 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
 
-                {% for product in all_products %}
+                {% for product in products %}
                     
                     <div class="col">
                         <div class="card shadow-sm">
-                            <img class="img-fluid" alt="Responsive image" src="{{ product.image.url }}">
+                            <img class="img-fluid product-image" alt="Responsive image" src="{{ product.image.url }}">
                             <div class="card-body">
                                 <p class="card-text">
                                     <a class="text-info text-decoration-none" href="{% url 'product_infor' product.slug %}"> {{ product.title | capfirst}} </a>
@@ -47,6 +47,33 @@
                 {% endfor %}
 
             </div>
+
+            <br>
+
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    {% if products.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link bg-primary text-white" href="?page1" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link bg-primary text-white" href="?page={{ products.previous_page_number }}">{{ previous_page }}</a></li>
+                    {% endif %}
+            
+                    <li class="page-item disabled"><span class="page-link bg-secondary">{{ products.number }}</span></li>
+            
+                    {% if products.has_next %}
+                        <li class="page-item"><a class="page-link bg-primary text-white" href="?page={{ products.next_page_number }}">{{ next_page }}</a></li>
+                        <li class="page-item">
+                            <a class="page-link bg-primary text-white" href="?page={{ products.paginator.num_pages }}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
+                            </a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
         </div>
     </div>
+
 {% endblock %}
