--- a/ecommerce/account/templates/account/password/password_reset_complete.html
+++ b/ecommerce/account/templates/account/password/password_reset_complete.html
@@ -12,16 +12,20 @@
 
     <br>
 
-    <div class="container bg-white shadow-md p-5 form-layout">
-        
-        <div class="text-center">
-            <h3> Password reset complete </h3>
+    <div class="container">
+        <div class="row justify-content-center p-3">
+            <div class="container col-4 bg-white shadow-md p-5 form-layout">
+                
+                <div class="text-center">
+                    <h3> Password reset complete </h3>
+                </div>
+                <hr>
+                <p> Your password has been set. You may proceed to login </p>
+
+                <a href="{% url 'login' %}" class="btn btn-primary my-2"> Login </a>
+
+            </div>
         </div>
-        <hr>
-        <p> Your password has been set. You may proceed to login </p>
-
-        <a href="{% url 'login' %}" class="btn btn-primary my-2"> Login </a>
-
     </div>
 
 {% endblock %}
