--- a/ecommerce/account/templates/account/password/password_reset_form.html
+++ b/ecommerce/account/templates/account/password/password_reset_form.html
@@ -12,23 +12,27 @@
 
     <br>
 
-    <div class="container bg-white shadow-md p-5 form-layout">
-        
-        <div class="text-center">
-            <h3> Enter your new password: </h3>
+    <div class="container">
+        <div class="row justify-content-center p-3">
+            <div class="container col-4 bg-white shadow-md p-5 form-layout">
+                
+                <div class="text-center">
+                    <h3> Enter your new password: </h3>
+                </div>
+                <hr>
+                <p> Please enter your new password twice so that we can verify that
+                    you typed it in correctly!
+                </p>
+
+                <form method="post">
+                    {% csrf_token %}
+                    {{form|crispy}}
+                    <br>
+                    <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"> Update password </button>
+                </form>
+
+            </div>
         </div>
-        <hr>
-        <p> Please enter your new password twice so that we can verify that
-            you typed it in correctly!
-        </p>
-
-        <form method="post">
-            {% csrf_token %}
-            {{form|crispy}}
-            <br>
-            <button type="submit" class="btn btn-primary navbar-btn text-white w-100 p-2"> Update password </button>
-        </form>
-
     </div>
 
 {% endblock %}
