--- a/ecommerce/account/templates/account/delete_account.html
+++ b/ecommerce/account/templates/account/delete_account.html
@@ -13,17 +13,21 @@
     </style>
 
     <body>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-4 form-layout">
-            <div class="text-center">
-                <h4> Account deletion </h4>
-            </div>
-            <hr>
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 mt-4 mb-4 form-layout">
+                    <div class="text-center">
+                        <h4> Account deletion </h4>
+                    </div>
+                    <hr>
 
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
-                <p> Are you sure you want to delete your account? </p>
-                <button type="submit"class="btn btn-danger"> Delete </button>
-            </form>
+                    <form method="POST" autocomplete="off">
+                        {% csrf_token %}
+                        <p> Are you sure you want to delete your account? </p>
+                        <button type="submit"class="btn btn-danger"> Delete </button>
+                    </form>
+                </div>
+            </div>
         </div>
     </body>
 
