--- a/ecommerce/account/templates/account/manage_shipping.html
+++ b/ecommerce/account/templates/account/manage_shipping.html
@@ -13,45 +13,49 @@
     </style>
 
     <body>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
-            <div class="text-center">
-                <h3> Manage Shipping </h3>
-            </div>
-            <hr>
-            <br>
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
+                    <div class="text-center">
+                        <h3> Manage Shipping </h3>
+                    </div>
+                    <hr>
+                    <br>
 
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
+                    <form method="POST" autocomplete="off">
+                        {% csrf_token %}
 
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.full_name|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.phone_number|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.email|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.address1|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.address2|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.city|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.district|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.ward|as_crispy_field}}
-                    </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.full_name|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.phone_number|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.email|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.address1|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.address2|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.city|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.district|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.ward|as_crispy_field}}
+                            </div>
+                        </div>
+
+                        <button type="submit"class="btn btn-primary mb-3"> Update </button>
+                    </form>
                 </div>
-
-                <button type="submit"class="btn btn-primary mb-3"> Update </button>
-            </form>
+            </div>
         </div>
     </body>
 
