--- a/ecommerce/account/templates/account/my_login.html
+++ b/ecommerce/account/templates/account/my_login.html
@@ -13,36 +13,40 @@
     </style>
 
     <body>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
-            <div class="text-center">
-                <h3> Login to your acccount </h3>
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 mt-4 mb-5 form-layout">
+                    <div class="text-center">
+                        <h3> Login to your acccount </h3>
+                    </div>
+                    <hr>
+
+                    <form method="POST" autocomplete="off">
+                        {% csrf_token %}
+
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.username|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.password|as_crispy_field}}
+                            </div>
+                        </div>
+
+                        <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Login </button>
+
+                        {{ form.non_field_errors }}
+
+                        <div class="text-center mb-3">
+                            <a href="{% url 'register' %}"> Don't have an account? Register here </a>
+                        </div>
+                        
+                        <div class="text-center">
+                            <a href="{% url 'reset_password' %}"> Forgot password? </a>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <hr>
-
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
-
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.username|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.password|as_crispy_field}}
-                    </div>
-                </div>
-
-                <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Login </button>
-
-                {{ form.non_field_errors }}
-
-                <div class="text-center mb-3">
-                    <a href="{% url 'register' %}"> Don't have an account? Register here </a>
-                </div>
-                
-                <div class="text-center">
-                    <a href="{% url 'reset_password' %}"> Forgot password? </a>
-                </div>
-            </form>
         </div>
     </body>
 
