--- a/ecommerce/account/templates/account/password/password_reset_sent.html
+++ b/ecommerce/account/templates/account/password/password_reset_sent.html
@@ -12,11 +12,15 @@
 
     <br>
 
-    <div class="container bg-white shadow-md p-5 form-layout">        
-        <p> 
-            We've emailed you instructions for setting your password.
-            Please check your email.
-        </p>
+    <div class="container">
+        <div class="row justify-content-center p-3">
+            <div class="container col-4 bg-white shadow-md p-5 form-layout">        
+                <p> 
+                    We've emailed you instructions for setting your password.
+                    Please check your email.
+                </p>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
