--- a/ecommerce/account/templates/account/profile_management.html
+++ b/ecommerce/account/templates/account/profile_management.html
@@ -13,40 +13,49 @@
     </style>
 
     <body>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-4 form-layout">
-            <div class="text-center">
-                <h3> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp; Profile management </h3>
-            </div>
-            <hr>
-        </div>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-4 form-layout">
-            <div class="text-center">
-                <h4> Update account </h4>
-            </div>
-            <hr>
-
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
-
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.username|as_crispy_field}}
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 mt-4 form-layout">
+                    <div class="text-center">
+                        <h3> <i class="fa fa-address-book" aria-hidden="true"></i> &nbsp; Profile management </h3>
                     </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.email|as_crispy_field}}
-                    </div>
+                    <hr>
                 </div>
-                <button type="submit"class="btn btn-primary"> Update </button>
-            </form>
-        </div>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-4 form-layout">
-            <div class="text-center">
-                <h4> Delete your account </h4>
             </div>
-            <hr>
-            <p> If you delete your account, you will lose all your data. </p>
-            <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'account_delete' %}"> Delete </a>
-        </div>
+
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 form-layout">
+                    <div class="text-center">
+                        <h4> Update account </h4>
+                    </div>
+                    <hr>
+
+                    <form method="POST" autocomplete="off">
+                        {% csrf_token %}
+
+                        <div class="row">
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.username|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.email|as_crispy_field}}
+                            </div>
+                        </div>
+                        <button type="submit"class="btn btn-primary"> Update </button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 mb-4 form-layout">
+                    <div class="text-center">
+                        <h4> Delete your account </h4>
+                    </div>
+                    <hr>
+                    <p> If you delete your account, you will lose all your data. </p>
+                    <a class="btn btn-primary navbar-btn text-white" type="button"  href="{% url 'account_delete' %}"> Delete </a>
+                </div>
+            </div>
     </body>
 
 {% endblock %}
