--- a/ecommerce/account/templates/account/registration/email_verification_sent.html
+++ b/ecommerce/account/templates/account/registration/email_verification_sent.html
@@ -11,13 +11,16 @@
     </style>
 
     <body>
-
-        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout text-center">
-            <i class="fa fa-envelope fa-3x text-center mb-3" aria-hidden="true"></i>
-            
-            <h5> <strong>A verification link was sent to your email</strong> </h5>
-            <hr>
-            <p> Please check your email </p>
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container col-4 bg-white shadow-md p-5 mt-4 mb-5 form-layout text-center">
+                    <i class="fa fa-envelope fa-3x text-center mb-3" aria-hidden="true"></i>
+                    
+                    <h5> <strong>A verification link was sent to your email</strong> </h5>
+                    <hr>
+                    <p> Please check your email </p>
+                </div>
+            </div>
         </div>
 
     </body>
