--- a/ecommerce/account/templates/account/registration/register.html
+++ b/ecommerce/account/templates/account/registration/register.html
@@ -13,36 +13,40 @@
     </style>
 
     <body>
-        <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
-            <div class="text-center">
-                <h3> Create your acccount </h3>
+        <div class="container">
+            <div class="row justify-content-center p-3">
+                <div class="container bg-white shadow-md p-5 mt-4 mb-5 form-layout">
+                    <div class="text-center">
+                        <h3> Create your acccount </h3>
+                    </div>
+                    <hr>
+
+                    <form method="POST" autocomplete="off">
+                        {% csrf_token %}
+
+                        <div class="row mb-2">
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.username|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.email|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.password1|as_crispy_field}}
+                            </div>
+                            <div class="col-lg-12 col-md-12 mb-3">
+                                {{form.password2|as_crispy_field}}
+                            </div>
+                        </div>
+                        <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Register </button>
+                        <div class="text-center">
+
+                            <a href="{% url 'login' %}"> Already have an account? </a>
+
+                        </div>
+                    </form>
+                </div>
             </div>
-            <hr>
-
-            <form method="POST" autocomplete="off">
-                {% csrf_token %}
-
-                <div class="row mb-2">
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.username|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.email|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.password1|as_crispy_field}}
-                    </div>
-                    <div class="col-lg-12 col-md-12 mb-3">
-                        {{form.password2|as_crispy_field}}
-                    </div>
-                </div>
-                <button type="submit"class="btn btn-primary w-100 p-2 mb-3"> Register </button>
-                <div class="text-center">
-
-                    <a href="{% url 'login' %}"> Already have an account? </a>
-
-                </div>
-            </form>
         </div>
     </body>
 
